tests/gen-derivation/derivation/core/norec t-p.->.. w_ext 003-neg/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Error during reflection: All arguments of the target type must be different

DerivedGen:9:46--9:48
 5 | %default total
 6 | 
 7 | %language ElabReflection
 8 | 
 9 | checkedGen : Fuel -> (Fuel -> Gen CanBeEmptyStatic a) => Gen CanBeEmptyStatic (a, a)
                                                  ^^

